assets/css/main.scss
---
# Use a comment to ensure Jekyll reads the file to be transformed into CSS later
# only main files contain this front matter, not partials.
---

@import "hydeout";

.avatar-paragraph{
	text-align: center;
}
.avatar-wrap{
	position: relative;
	display: inline-block;
	width: 50%;
}
.avatar{
	float: none;
	display: block;
	width: 100%;
	border-radius:50%;
}
.avatar-badge{
	position: absolute;
	right: -6%;
	bottom: 2%;
	line-height: 0;
}

#pubkey-link{
	img {
	width:23px;
	}
}

